Updates to import project workflow

--- a/app/views/data_imports/edit_srid.html.erb
+++ b/app/views/data_imports/edit_srid.html.erb
@@ -7,5 +7,5 @@
 <% end %>
 
 <p>
-<b>Protip</b>: Common SRID's worth trying are 4326, 28356, 3107, add to this list...
+<b>Protip</b>: Common SRID's worth trying are 4326, 28356, 3107, 28355 add to this list...
 </p>
