--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -57,7 +57,7 @@
 
 <div class="column-group horizontal-gutters vertical-gutters">
   <div class="all-80 push-center highlight">
-    <h3>Affix a Geographic Boundary</h3>
+    <h4>Modify Geographic Boundary</h4>
 
     <%= simple_form_for(@project) do |f| %>
       <div class="control-group all-33">
