--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,11 @@
 <div class="ink-grid">
   <div class="column-group push-center">
     <div class="all-90">
-      <div class="logo"><img src="/assets/logo.png" height="60" data-no-retina /></div>
+      <div class="logo"><%= image_tag("logo.png", height: 60, alt: "Logo", data: { :no-retina => "" }) %></div>
       <nav class="ink-navigation">
       <ul class="menu horizontal black">
         <li><a href="/">Home</a></li>
-        <li><a href="#">Help</a></li>
+        <!--<li><a href="#">Help</a></li>-->
         <li><a href="/projects">Public Projects</a></li>
       </ul>
       </nav>
