--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 <div class="ink-grid">
   <div class="column-group push-center">
     <div class="all-90">
-      <div class="logo"><%= image_tag("logo.png", height: 60, alt: "Logo", data: { :no-retina => "" }) %></div>
+      <div class="logo"><%= image_tag("logo.png", height: 60, alt: "Logo", data: { "no-retina".to_sym => "" }) %></div>
       <nav class="ink-navigation">
       <ul class="menu horizontal black">
         <li><a href="/">Home</a></li>
