--- a/app/views/data_imports/edit.html.erb
+++ b/app/views/data_imports/edit.html.erb
@@ -10,6 +10,6 @@
 
   <p><%= f.input :name_field, collection: @data_import.item_attributes %></p>
 
-  <p><%= f.submit :submit, class: "ink-button blue" %></p>
+  <p><%= f.submit "Update", class: "ink-button blue" %></p>
 
 <% end %>
