--- a/app/views/data_imports/edit_srid.html.erb
+++ b/app/views/data_imports/edit_srid.html.erb
@@ -9,7 +9,7 @@
 
   <p><%= f.input :srid %></p>
 
-  <p><%= f.submit :submit, class: "ink-button blue" %></p>
+  <p><%= f.submit "Update", class: "ink-button blue" %></p>
 
 <% end %>
 
