--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -75,7 +75,7 @@
     <h4>Much more</h4>
     <ul>
       <li>Parking spaces & restricted parking - all parking inspectors carry cameras, making it trivial to document your city</li>
-      <li>Signs - need to capture the signed speed limits across multiple authorities? Use this tool to complete your dataset (@@link to geelong city council efforts)</li>
+      <li>Signs - need to capture the signed speed limits across multiple authorities? Use this tool to complete your dataset</li>
       <li>Tree health - Let members of your community tell you when a tree is ill, growing too much or more - find out *before* it becomes a costly issue to rectify.</li>
     </ul>
 
