--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -37,7 +37,7 @@
         <div class="control-group all-33">
           <%= f.label :name %>
           <div class="control">
-            <%= f.text_field :name, :placeholder => "My great project" %>
+            <%= f.text_field :name, :placeholder => "My new project", value: "Adelaide Council Tree Map" %>
           </div>
         </div>
         <div class="control-group all-33">
