--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -54,7 +54,7 @@
       <div class="control-group all-33">
         <%= f.input :project_id, as: :hidden %>
         <%= f.input :data_source_uri, label: 'Data Source URI', placeholder: 'http://...', value: "http://opendata.adelaidecitycouncil.com/street_trees/street%20trees-point.kmz" %>
-        <small class="pull-left">(csv w/coordinates, kml or shp as WSG84)</small>
+        <small class="pull-left">(csv w/coordinates, kml or shp as WSG84). Not sure? <a href="http://opendata.adelaidecitycouncil.com/street_trees/street%20trees-point.kmz">Copy this link</a></small>
       </div>
       <div class="control-group all-33" style='clear:left;'>
         <div class="control">
