Add clarity to landing page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -12,7 +12,7 @@
 <div class="column-group horizontal-gutters vertical-gutters splash">
   <div class="all-30 order-1">
     <h3>Add your data</h3>
-    <p>Upload a shp or csv file</p>
+    <p>Upload a kml, shp or csv file</p>
     <p>Describe your data</p>
   </div>
   <div class="all-30 order-2">
@@ -22,7 +22,7 @@
   </div>
   <div class="all-30 order-3">
     <h3>Download results</h3>
-    <p>One easy zip</p>
+    <p>One easy zip<sup>(coming soon!)</sup></p>
     <p>Easy to republish</p>
   </div>
 </div>
