--- a/app/views/items/_list.html.erb
+++ b/app/views/items/_list.html.erb
@@ -1,4 +1,6 @@
-<%= link_to_if(@items.present?, "Export Data",export_project_url(@items.first.project), :class=>"ink-button blue") %>
+<% if @items.present? %>
+  <%= link_to("Export Data",export_project_url(@items.first.project), :class=>"ink-button blue") %>
+<% end %>
 <table class="ink-table items alternating hover " id="items-table">
   <thead>
       <th>Name</th>
