--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,18 +9,18 @@
   </div>
 </main>
 </div>
-<div class="column-group horizontal-gutters vertical-gutters splash">
-  <div class="all-30 order-1">
+<div class="column-group splash">
+  <div class="all-33 order-1">
     <h3>Add your data</h3>
     <p>Upload a kml, shp or csv file</p>
     <p>Describe your data</p>
   </div>
-  <div class="all-30 order-2">
+  <div class="all-33 order-2">
     <h3>Ask for Photos</h3>
     <p>Share a link with participants</p>
     <p>Get crowdsourced photos</p>
   </div>
-  <div class="all-30 order-3">
+  <div class="all-30 order-3 last">
     <h3>Download results</h3>
     <p>One easy zip<sup>(coming soon!)</sup></p>
     <p>Easy to republish</p>
@@ -30,7 +30,7 @@
 <div class="column-group horizontal-gutters vertical-gutters">
   <div class="all-80 push-center highlight">
 
-    <h4 class="col-md-offset-2">New Project</h4>
+    <h4 class="col-md-offset-2">Start your Project</h4>
     <%= simple_form_for @project, :html => { :class => 'ink-form'} do |f| %>
       <div class="column-group gutters">
 
